--- a/css/styles.css
+++ b/css/styles.css
@@ -1,42 +1,39 @@
 body {
-font-family: 'Roboto', sans-serif;
-color: #434455;
-background-color: #FFF;
-margin: 0;
-height: 100%;
-width: auto;}
+    font-family: 'Roboto', sans-serif;
+    color: #434455;
+    background-color: #FFF;
+    margin: 0;
+    height: 100%;
+    }
 
-.container {width: 1440px;
-padding-left: 15px;
-padding-right: 15px;
-margin-left: auto;
-margin-right: auto;}
+img {display: block;}
+
+.container {width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;}
 
 .menu-page .container {display: flex;
 justify-content: center;
 align-items: center;
 flex-direction: row;
-margin: 0;
-padding: 0;}
+}
 
-.menu-nav {display: flex;
-flex-direction: row;}
+.menu-nav {display: flex;}
 
 .menu-page {background: #FFF;
-    border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);
-        display: block;}
+    border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);}
 
 .page-nav {display: flex;
 gap: 40px;
 list-style-type: none;
-padding-top: 24px;
-padding-bottom: 24px;
+padding: 24px 0;
 margin-right: 332px;}
 
 
 .page-address {display: flex;
 gap: 40px;
-list-style-type: none;}
+list-style-type: none;
+padding: 24px 0;}
 
 .menu-page .logo {padding-top: 25.5px;
 padding-bottom: 25.5px;
@@ -90,9 +87,10 @@ padding-left: 32px;
 padding-right: 32px;
 padding-top: 16px;
 padding-bottom: 16px;
-display: inline-flex;
-align-items: flex-start;
-width: 169px;
+display: block;
+min-width: 169px;
+border: none;
+height: 56px;
 gap: 10px;
 white-space: nowrap;
 border-radius: 4px;
@@ -102,8 +100,7 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);}
 .main-page-btn:focus {background-color: #404BBF;}
 
 .main-page-text {background: #2E2F42;
-padding-top: 120px;
-padding-bottom: 120px;
+padding: 188px 0;
 }
 
 .main-page-text-title {color:#FFF;
@@ -117,7 +114,8 @@ padding-bottom: 120px;
     padding-right: 472px;
     display: block;
     box-sizing: content-box;
-    width: 496px;}
+    width: 100%;
+    max-width: 496px;}
 
 .container-text {background-color: #FFF;
 padding-top: 120px;
@@ -125,50 +123,35 @@ padding-bottom: 120px;
 display: flex;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);}
+
+.list-block {width: calc((100% - 72px) / 4);
+}
+
 .container-text-title {color: #2E2F42;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
-    letter-spacing: 0.02em;}
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+}
     
-
 .container-text-list {background-color: #FFFFFF;
 list-style-type: none;
 display: flex;
 align-items: center;
 justify-content: center;
-width: calc((100%-30)/4);
-flex-direction: row;
 flex-shrink: 0;
 gap: 24px;
-}
-
-.strategy-block {
-display: flex;
-width: 264px;
-flex-direction: column;
-align-items: flex-start;
-gap: 8px;}
-
-.punctuality-block {display: flex;
-    width: 264px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-}
-
-.diligence-block {display: flex;
-    width: 264px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-}
-
-.technologies-block {display: flex;
-    width: 264px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
 }
 
 .container-text-descr {font-size: 16px;
@@ -188,66 +171,34 @@ display: flex;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    padding-bottom: 72px; }
+    margin-bottom: 72px; }
 
 .team-company-list {list-style-type: none;
 display: flex;
 box-sizing: border-box;
 gap: 24px;
-justify-content: center;
-align-items: center;}
+align-items: center;
+width: calc((100% - 72px) / 4);
+border-radius: 0px 0px 4px 4px;}
 
 
-.mark-prod-des {display: inline-flex;
-
-padding-bottom: 32px;
+.name-job-block {display: flex;
+padding: 32px 0;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-gap: 32px;
+
 border-radius: 0px 0px 4px 4px;
 background: var(--WHITE, #FFF);
 box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
-.tom-front-devel {display: inline-flex;
-  padding-bottom: 32px;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-gap: 32px;
-border-radius: 0px 0px 4px 4px;
-background: var(--WHITE, #FFF);
-box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
-
-.camila-marketing {display: inline-flex;
-    padding-bottom: 32px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 32px;
-border-radius: 0px 0px 4px 4px;
-    background: var(--WHITE, #FFF);
-    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
-
-.daniel-ui {display: inline-flex;
-    
-    padding-bottom: 32px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 32px;
-border-radius: 0px 0px 4px 4px;
-    background: var(--WHITE, #FFF);
-    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
 
 .team-company-page {background-color: #FFFFFF;}
 
 .team-name {color:#2E2F42;
     text-align: center;
+    margin-bottom: 8px;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
@@ -261,8 +212,9 @@ border-radius: 0px 0px 4px 4px;
 .sector-portfolio-company {background: #FFF;
 padding-top: 120px;
     padding-bottom: 120px;
-    display: flex;
-}
+    display: flex;}
+
+.portfolio-block {width: calc((100% - 48px) / 3);}
 
 
 .title-text-portfolio {color: #2E2F42;
@@ -272,120 +224,47 @@ padding-top: 120px;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-padding-bottom: 72px;}
+margin-bottom: 72px;}
+
+.item {padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-shrink: 0;}
 
 .portfolio-company-list {list-style-type: none;
 display: flex;
     box-sizing: border-box;
-    gap: 24px;
+    column-gap: 24px;
+    row-gap: 48px;
     justify-content: center;
     align-items: center;
 flex-wrap: wrap;}
-
-.item-banking {display: flex;
-    
-    margin-bottom: 48px;
-    width: 360px;
-    height: 420px;
-    padding-bottom: 32px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 32px;
-    flex-shrink: 0;
-border: 1px solid var(--CORNFLOWER, #E7E9FC);
-    background: var(--WHITE, #FFF);
-}
-
-.item-cash {display: flex;
-    margin-bottom: 48px;
-    width: 360px;
-    height: 420px;
-    padding-bottom: 32px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 32px;
-    flex-shrink: 0;
-    border: 1px solid var(--CORNFLOWER, #E7E9FC);
-        background: var(--WHITE, #FFF);
-
-}
-
-.item-meditation {display: flex;
-   
-    width: 360px;
-    margin-bottom: 48px;
-    height: 420px;
-    padding-bottom: 32px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 32px;
-    flex-shrink: 0;
-border: 1px solid var(--CORNFLOWER, #E7E9FC);
-    background: var(--WHITE, #FFF);
-}
-
-.item-taxi {display: flex;
-   
-    width: 360px;
-    height: 420px;
-    padding-bottom: 32px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 32px;
-    flex-shrink: 0;
-    border: 1px solid var(--CORNFLOWER, #E7E9FC);
-        background: var(--WHITE, #FFF);
-}
-
-.item-screen {display: flex;
-    width: 360px;
-    height: 420px;
-    padding-bottom: 32px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 32px;
-    flex-shrink: 0;
-border: 1px solid var(--CORNFLOWER, #E7E9FC);
-    background: var(--WHITE, #FFF);
-}
-
-.item-cours {display: flex;
-   
-    width: 360px;
-    height: 420px;
-    padding-bottom: 32px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 32px;
-    flex-shrink: 0;
-border: 1px solid var(--CORNFLOWER, #E7E9FC);
-    background: var(--WHITE, #FFF);
-}
 
 .item-portfolio-company {color: #2E2F42;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
-    letter-spacing: 0.02em;}
+    letter-spacing: 0.02em;
+margin-bottom: 8px;}
 
 .direction-item-portfolio-company {font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;}
 
 .sector-contacts-company {background: #2E2F42;
-display: flex;}
+display: flex;
+padding: 100px 0;}
 
 .text-contacts-company {color: #F4F4FD;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-width: 264px;
-margin-left: 156px;
-margin-bottom: 100px;}
+max-width: 264px;}
 
-
-
-.sector-contacts-company .logo {padding-top: 100px;
-padding-bottom: 17.5px;
-margin-left: 156px;}
+.sector-contacts-company .logo {display: inline-block;
+margin-bottom: 16px;
+}
   
