--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,10 @@ align-items: center;
 flex-direction: row;
 }
 
-.menu-nav {display: flex;}
+.menu-nav {display: flex;
+align-items: center;}
+
+.link {padding: 24px 0;}
 
 .menu-page {background: #FFF;
     border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);}
@@ -26,7 +29,6 @@ flex-direction: row;
 .page-nav {display: flex;
 gap: 40px;
 list-style-type: none;
-padding: 24px 0;
 margin-right: 332px;}
 
 
@@ -134,8 +136,6 @@ display: flex;
     clip: rect(0 0 0 0);
     clip-path: inset(50%);}
 
-.list-block {width: calc((100% - 72px) / 4);
-}
 
 .container-text-title {color: #2E2F42;
     font-size: 20px;
@@ -144,6 +144,8 @@ display: flex;
     letter-spacing: 0.02em;
     margin-bottom: 8px;
 }
+
+.list-block {width: calc((100% - 72px) / 4);}
     
 .container-text-list {background-color: #FFFFFF;
 list-style-type: none;
@@ -178,8 +180,7 @@ display: flex;
 box-sizing: border-box;
 gap: 24px;
 align-items: center;
-width: calc((100% - 72px) / 4);
-border-radius: 0px 0px 4px 4px;}
+}
 
 
 .name-job-block {display: flex;
@@ -187,14 +188,16 @@ padding: 32px 0;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-
 border-radius: 0px 0px 4px 4px;
 background: var(--WHITE, #FFF);
 box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 
-.team-company-page {background-color: #FFFFFF;}
+.team-company-page {background-color: #FFFFFF;
+    border-radius: 0px 0px 4px 4px;
+width: calc((100% - 72px) / 4);
+}
 
 .team-name {color:#2E2F42;
     text-align: center;
@@ -214,7 +217,9 @@ padding-top: 120px;
     padding-bottom: 120px;
     display: flex;}
 
-.portfolio-block {width: calc((100% - 48px) / 3);}
+.portfolio-block {border-radius: 0px 0px 4px 4px;
+    width: calc((100% - 48px) / 3);
+}
 
 
 .title-text-portfolio {color: #2E2F42;
@@ -234,7 +239,8 @@ margin-bottom: 72px;}
     align-items: flex-start;
     flex-shrink: 0;}
 
-.portfolio-company-list {list-style-type: none;
+.portfolio-company-list {
+    list-style-type: none;
 display: flex;
     box-sizing: border-box;
     column-gap: 24px;
